# ioi-assignment

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api/: context.py  db.py  exchange.py  models.py  view.py  views.py
api/migrations/: env.py
api/migrations/versions/: 26726400ebf5_.py
api/settings/: __init__.py  base.py  dev.py  prod.py
tests/: test_exchange.py  test_views.py
